<resources>
    <string name="app_name">Contact App</string>
    <string name="contacts">Contacts</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="add_contact">Add Contact</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="todo">TODO</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="update_contact_details">Update Contact Details</string>
</resources>