<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="contact"
            type="com.example.contactappwithmvvm.database.entities.Contact"/>

    </data>

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fitsSystemWindows="true"
       android:fillViewport="true">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           tools:context=".ui.activities.ContactInfoActivity">

           <androidx.appcompat.widget.Toolbar
               android:id="@+id/toolbar"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:background="?attr/colorPrimary"
               android:minHeight="?attr/actionBarSize"
               android:theme="?attr/actionBarTheme"
               app:navigationIcon="@drawable/arrow_back_ios_24"
               app:title="Contact Details"
               app:titleTextColor="@color/white"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/imageView3"
               android:layout_width="160dp"
               android:layout_height="160dp"
               android:layout_marginTop="32dp"
               app:imageBitmap="@{contact.image}"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/toolbar" />

           <TextView
               android:id="@+id/textView5"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
               android:background="@drawable/underline_bg"
               android:drawablePadding="10dp"
               android:paddingEnd="10dp"
               android:paddingStart="1dp"
               android:paddingBottom="10dp"
               android:paddingTop="10dp"
               android:text="@{contact.firstName}"
               android:textSize="18sp"
               app:drawableStartCompat="@drawable/account_circle_24"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView6" />

           <TextView
               android:id="@+id/textView6"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="36dp"
               android:layout_marginTop="32dp"
               android:text="@string/first_name"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/imageView3" />

           <TextView
               android:id="@+id/textView7"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="40dp"
               android:layout_marginTop="16dp"
               android:text="@string/last_name"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView5" />

           <TextView
               android:id="@+id/textView8"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
               android:background="@drawable/underline_bg"
               android:drawablePadding="10dp"
               android:paddingEnd="10dp"
               android:paddingStart="1dp"
               android:paddingBottom="10dp"
               android:paddingTop="10dp"
               android:text="@{contact.lastName}"
               android:textSize="18sp"
               app:drawableStartCompat="@drawable/account_circle_24"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView7" />

           <TextView
               android:id="@+id/textView9"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="40dp"
               android:layout_marginTop="16dp"
               android:text="@string/mobile_no"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView8" />

           <TextView
               android:id="@+id/textView10"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
               android:drawablePadding="10dp"
               android:paddingEnd="10dp"
               android:paddingStart="1dp"
               android:paddingBottom="10dp"
               android:paddingTop="10dp"
               android:text="@{contact.contactNumber}"
               android:textSize="18sp"
               android:background="@drawable/underline_bg"
               app:drawableStartCompat="@drawable/phone_24"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView9" />

           <TextView
               android:id="@+id/textView11"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="40dp"
               android:layout_marginTop="16dp"
               android:text="@string/email"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView10" />

           <TextView
               android:id="@+id/textView12"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
               android:drawablePadding="10dp"
               android:paddingEnd="10dp"
               android:paddingStart="1dp"
               android:paddingBottom="10dp"
               android:paddingTop="10dp"
               android:text="@{contact.email}"
               android:textSize="18sp"
               android:background="@drawable/underline_bg"
               app:drawableStartCompat="@drawable/email_24"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView11" />

           <TextView
               android:id="@+id/textView13"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="40dp"
               android:layout_marginTop="16dp"
               android:text="@string/address"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView12" />

           <TextView
               android:id="@+id/textView14"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
               android:drawablePadding="10dp"
               android:paddingEnd="10dp"
               android:paddingStart="1dp"
               android:paddingBottom="10dp"
               android:paddingTop="10dp"
               android:text="@{``+contact.city+`, `+ contact.state}"
               android:textSize="18sp"
               android:maxLines="1"
               android:ellipsize="end"
               android:background="@drawable/underline_bg"
               app:drawableStartCompat="@drawable/home_24"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView13" />


           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/deleteItem"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="32dp"
               android:layout_marginTop="24dp"
               android:layout_marginEnd="32dp"
               android:layout_marginBottom="32dp"
               android:background="#C55050"
               android:text="@string/delete"
               android:textColor="@color/white"
               android:textSize="18sp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/textView14"
               app:layout_constraintVertical_bias="1.0" />

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/editButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:layout_marginEnd="24dp"
               android:text="@string/edit"
               android:textColor="@color/white"
               android:background="@drawable/button_bg"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/toolbar" />
       </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>
</layout>